@@ -1,4 +1,7 @@
 
+[B][COLOR red]Update - v1.1.9 - June 12, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] "Trakt Manager" updated for changed to Venom addon.[/I]
+
 [B][COLOR red]Update - v1.1.8 - June 08, 2021[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] "Rescrape Lib Item" is now availble for Library Items via context menu for
     items added from the Venom addon.[/I]
